проработка логики управление пользователем (удалить, заблокировать)
